
An entry should be made for _every_ commit to the repository.
The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/10/10 13:10:00 EDT
Tag: blume-20021010-ppc-divs
Description:

The mltree operator DIVS must be implemented with an overflow check on
the PPC because the hardware indicates divide-by-zero using "overflow" as
well.

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/07/23 11:45:00
Tag: blume-20020723-smlnj-home
Description:

Sml now senses the SMLNJ_HOME environment variable.  If this is set,
then the bin dir is assumed to be in $SMLNJ_HOME/bin and (unless
CM_PATHCONFIG is also set), the path configuration file is assumed
to be in $SMLNJ_HOME/lib/pathconfig.  This way one can easily move
the entire tree to some other place and everything will "just work".

(Companion commands such as ml-build and ml-makedepend also sense this
variable.)

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/07/12 21:19:00 EDT
Tag: blume-20020712-liveness
Description:

Exported two useful "step" functions from liveness module (MLRISC).

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/07/05 16:00 EDT
Tag: Release_110_41
Description:

New working release.  New bootfiles.

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/07/05 10:25:00 EDT
Tag: blume-20020705-btimp
Description:

Exported structure BTImp from $smlnj/viscomp/debugprof.cm so that
other clients can set up backtracing support.

----------------------------------------------------------------------
Name: Matthias Blume