@@ -1,6 +1,12 @@
 BOOT: the location of the latest boot files.
 ----------------------------------------------------------------------
 Name: Matthias Blume
+Date: 2002/10/16 12:00:00 EST
+Tag: Release_110_42
+Version: 110.42
+Location: ftp://ftp.research.bell-labs.com/dist/smlnj/working/110.42/
+----------------------------------------------------------------------
+Name: Matthias Blume
 Date: 2002/07/05 16:00:00 EST
 Tag: Release_110_41
 Version: 110.41
