@@ -40,7 +40,7 @@
     <br>$/controls-lib.cm is a distillation of what used to be a CM-only
      mechanism.  It is now used throughout the compiler.
 <li>bug fixed in IntInf (parsing of hex literals)
-<li> <t>==</t> and <t>!=</t> added to INT_INF interface (just
+<li> <tt>==</tt> and <tt>!=</tt> added to INT_INF interface (just
      placeholders for now)
 <li>added mergeWith function to ORD_MAP interface
 <li>added an implementation of Danvy-style format combinators to $/smlnj-lib.cm
