@@ -2,7 +2,7 @@
 
                   1  1  0  .  4  2      N  E  W  S
 			
-  		         October ??, 2002
+  		         October 16, 2002
 
 			      WARNING
 
